create core logic
